--- a/index.html
+++ b/index.html
@@ -15,28 +15,40 @@
             <thead>
                 <tr>
                     <th>ID</th>
-                    <th>Sensör Adı</th>
-                    <th>Sensör Değeri</th>
-                    <th>Zaman</th>
+                    <th>SensorData</th>
+                    <th>LocationData</th>
+                    <th>Value 1</th>
+                    <th>Value 2</th>
+                    <th>Value 3</th>
+                    <th>Timestamp</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>1</td>
                     <td>Sensör A</td>
-                    <td>22.5 °C</td>
+                    <td>Oda 1</td>
+                    <td>22.5</td>
+                    <td>45%</td>
+                    <td>1012 hPa</td>
                     <td>2024-11-02 10:00</td>
                 </tr>
                 <tr>
                     <td>2</td>
                     <td>Sensör B</td>
-                    <td>18.0 °C</td>
+                    <td>Oda 2</td>
+                    <td>18.0</td>
+                    <td>50%</td>
+                    <td>1015 hPa</td>
                     <td>2024-11-02 10:05</td>
                 </tr>
                 <tr>
                     <td>3</td>
                     <td>Sensör C</td>
-                    <td>25.5 °C</td>
+                    <td>Oda 3</td>
+                    <td>25.5</td>
+                    <td>40%</td>
+                    <td>1009 hPa</td>
                     <td>2024-11-02 10:10</td>
                 </tr>
             </tbody>
